--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "next-plugin-antd-less": "^1.8.0",
     "next-redux-wrapper": "^8.1.0",
     "nookies": "^2.5.2",
+    "quill": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^5.0.0",
     "react-phone-input-2": "^2.15.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.2",
     "react-use": "^17.6.0",
