--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nookies": "^2.5.2",
     "quill": "^2.0.3",
     "react": "^18.2.0",
+    "react-barcode": "^1.6.1",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^5.0.0",
     "react-phone-input-2": "^2.15.1",
