--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-toastify": "^11.0.2",
     "react-use": "^17.6.0",
     "recharts": "^2.15.3",
+    "sharp": "^0.34.4",
     "tailwind-merge": "^2.6.0",
     "tailwind-styled-components": "^2.2.0",
     "xlsx": "^0.18.5",
