--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "framer-motion": "^11.18.0",
     "libphonenumber-js": "^1.11.17",
     "lottie-react": "^2.4.0",
-    "next": "^15.1.7",
+    "next": "^16.0.10",
     "next-plugin-antd-less": "^1.8.0",
     "next-redux-wrapper": "^8.1.0",
     "nookies": "^2.5.2",
     "quill": "^2.0.3",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-barcode": "^1.6.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-error-boundary": "^5.0.0",
     "react-phone-input-2": "^2.15.1",
     "react-quill": "^2.0.0",
@@ -46,11 +46,15 @@
     "@locator/runtime": "^0.4.4",
     "@react-dev-inspector/middleware": "^2.0.1",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
     "postcss": "^8",
     "react-dev-inspector": "^2.0.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "eslint-config-next": "^16.0.10"
+  },
+  "engines": {
+    "node": ">=20.9.0"
   }
 }
